[gd_scene load_steps=5 format=3 uid="uid://bcqwfnteb6cjn"]

[ext_resource type="Script" path="res://src/menu/control_scene.gd" id="1_2x8dr"]
[ext_resource type="Texture2D" uid="uid://c64d6ghwsufam" path="res://assets/menu/background.png" id="2_052ir"]
[ext_resource type="PackedScene" path="res://scene/menu/input_button.tscn" id="3_263dx"]
[ext_resource type="FontFile" uid="uid://cvmquumd6um6u" path="res://assets/fonts/Beyonders.ttf" id="4_el1ko"]

[node name="ControlInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2x8dr")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(3993, 0)

[node name="Background" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
texture_filter = 1
offset_right = 6144.0
offset_bottom = 1024.0
scale = Vector2(0.65, 0.65)
texture = ExtResource("2_052ir")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -95.0
offset_right = 163.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_el1ko")
text = "Controls"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ActionList" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputButton" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ActionList" instance=ExtResource("3_263dx")]
layout_mode = 2

[node name="InputButton2" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ActionList" instance=ExtResource("3_263dx")]
layout_mode = 2

[node name="InputButton3" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ActionList" instance=ExtResource("3_263dx")]
layout_mode = 2

[node name="InputButton4" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ActionList" instance=ExtResource("3_263dx")]
layout_mode = 2

[node name="InputButton5" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ActionList" instance=ExtResource("3_263dx")]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResetButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("4_el1ko")
theme_override_font_sizes/font_size = 11
text = "reset to default"

[node name="ExitButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("4_el1ko")
theme_override_font_sizes/font_size = 11
text = "Exit"

[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
